# hw_2025

./: .clang-fomat  .clang-tidy  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  debug.txt  main.cpp  makefile  result.txt
data_analyze/: data_analyze.py
src/: main.cpp
src/include/: config.h  data.h  disk.h  disk_manager.h  garbage_collection.h  init.h  object.h  printer.h  resource_allocator.h  scheduler.h  segment.h  task.h  top_scheduler.h  tsp.h
